--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,12 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=7.3",
+        "hyperf-ext/auth": "^2.2",
+        "hyperf-ext/encryption": "^2.2",
+        "hyperf-ext/hashing": "^2.2",
         "hyperf-ext/jwt": "^2.2",
+        "hyperf/amqp": "~2.2.0",
+        "hyperf/async-queue": "~2.2.0",
         "hyperf/cache": "~2.2.0",
         "hyperf/command": "~2.2.0",
         "hyperf/config": "~2.2.0",
@@ -26,17 +31,14 @@
         "hyperf/http-server": "~2.2.0",
         "hyperf/logger": "~2.2.0",
         "hyperf/memory": "~2.2.0",
-        "hyperf/process": "~2.2.0",
-        "hyperf/validation": "^2.2",
-        "phpunit/php-file-iterator": "^3.0",
-        "kilofox/hyperf-captcha": "^1.0",
-        "hyperf/redis": "~2.2.0",
         "hyperf/model-cache": "~2.2.0",
-        "hyperf/amqp": "~2.2.0",
-        "hyperf/async-queue": "~2.2.0",
-        "hyperf-ext/auth": "^2.2",
-        "hyperf-ext/encryption": "^2.2",
-        "hyperf-ext/hashing": "^2.2"
+        "hyperf/process": "~2.2.0",
+        "hyperf/redis": "~2.2.0",
+        "hyperf/validation": "^2.2",
+        "kilofox/hyperf-captcha": "^1.0",
+        "phpunit/php-file-iterator": "^3.0",
+        "symfony/css-selector": "^5.4",
+        "symfony/dom-crawler": "^5.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
